Added methods for update products and filters